# robot_simulation_v2

./: README.md  operating_table.blend  operation_room.blend  operation_room.blend1  robot_sketch.blend
3D/: operation_room.blend1  robot_sketch.blend1
Kosbot/: .gitignore  CMakeLists.txt  Config.h.in  cmake_functions.cmake  main.cpp  open_nvim_config.bat
Kosbot/Core/: CMakeLists.txt  core_entry.cpp
Kosbot/Core/include/: Core.h
Kosbot/Core/src/: core.cpp
Kosbot/Include/: Kosbot.h
Kosbot/Networking/: CMakeLists.txt  Client.h  Server.h  entry.cpp  functions.cxx  net_test.h
Kosbot/Source/: Kosbot.cpp  main.cpp
Kosbot/scripts/: generate.bat
Kosbot/src/: CMakeLists.txt  glad.c  main.cpp
PyKosbot/: Kosbot.py  Kosbot_Info.py  Kosbot_Server.py  client.py  kin_test.py  kosbot.urdf  kostbot.py  main.py  reqs.txt
PyKosbot/undodir/: C%%dev%robot_simulation_v2%PyKosbot%Kosbot.py  C%%dev%robot_simulation_v2%PyKosbot%Kosbot_Server.py
RobotSimulation/: DeleteFolders.bat  RobotSimulation.uproject
RobotSimulation/Config/: DefaultEngine.ini  DefaultGame.ini
RobotSimulation/Content/Assets/: link_base.fbx  link_base.uasset  link_mesh.uasset
RobotSimulation/Content/Assets/ECG_Machine/: ECG_Machine_Model.uasset  ECG_Mat.uasset  ECG_Mat_Metallic.uasset  ECG_Mat_Normal.uasset  ECG_Screen_Mat.uasset  ECG_Screen_Mat_Normal.uasset
RobotSimulation/Content/Assets/Floor/: floor.fbx  floor.uasset
RobotSimulation/Content/Assets/Hospital_Bed_A/: Hospital_Bed_A.uasset  Hospital_Bed_A_Hospital_Bed_A_Material_Metallic.uasset  Hospital_Bed_A_Material.uasset
RobotSimulation/Content/Assets/Hospital_Bedpan_A/: Bedpan_A_Bedpan_A_Material_BaseColor.uasset  Bedpan_A_Bedpan_A_Material_Roughness.uasset  Hospital_Bedpan_A.uasset  Hospital_Bedpan_A_Material.uasset
RobotSimulation/Content/Assets/Hospital_Utility_Table_B/: Hospital_Utility_Table_B_Door.uasset  Hospital_Utility_Table_B_Drawer.uasset  Hospital_Utility_Table_B_Material.uasset  Hospital_Utility_Table_B_Substance_Hospital_Utility_Table_B_Material_BaseColor.uasset  Hospital_Utility_Table_B_Substance_Hospital_Utility_Table_B_Material_Metallic.uasset  Hospital_Utility_Table_B_Substance_Hospital_Utility_Table_B_Material_Normal.uasset  Hospital_Utility_Table_B_Substance_Hospital_Utility_Table_B_Material_Roughness.uasset  Hospital_Utility_Table_B_Table.uasset
RobotSimulation/Content/Assets/OperationRoom/ECG_Machine/: ECG_Mat.uasset  (+10 more)
RobotSimulation/Content/Assets/OperationTable/: operation_table.fbx  operation_table.uasset  operation_table_pillow_merged.fbx  operation_table_pillow_merged_op_table.uasset  operation_table_pillow_merged_pillow.uasset  ot_pillow.fbx  ot_pillow.uasset
RobotSimulation/Content/Assets/Robot/: M_RobotLink.uasset  link_base.uasset  link_mesh.fbx  link_mesh.uasset  link_part.fbx  link_part.uasset
RobotSimulation/Content/Assets/Table/: M_Table.uasset  table.fbx  table.uasset
RobotSimulation/Content/Assets/Wall/: M_Wall.uasset  wall.fbx  wall.uasset
RobotSimulation/Content/Blueprints/: BP_Client.uasset  BP_Robot.uasset  BP_Server.uasset  BP_TCPClient.uasset  BP_TCPServer.uasset  BP_TestClient.uasset  BP_UIActor.uasset
RobotSimulation/Content/MSPresets/M_MS_Surface_Material/: M_MS_Surface_Material.uasset
RobotSimulation/Content/Maps/: Base.umap  Base_HLOD0_Instancing.uasset  L_OperationRoom.umap
RobotSimulation/Content/UI/: Reset_Sign.uasset  WB_ControlPanel.uasset  WB_RobotController.uasset  WB_Slider_Display.uasset  WB_VectorDisplay.uasset
RobotSimulation/Source/: RobotSimulation.Target.cs  RobotSimulationEditor.Target.cs
RobotSimulation/Source/RobotSimulation/: Client.cpp  Client.h  KosbotClient.cpp  KosbotClient.h  Robot.cpp  Robot.h  RobotSimulation.Build.cs  RobotSimulation.cpp  RobotSimulationGameModeBase.cpp  RobotSimulationGameModeBase.h  Server.cpp  Server.h  TCPClient.cpp  TCPClient.h
(+201 files in other folders)
